[gd_scene load_steps=10 format=2]

[ext_resource path="res://WallNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://light.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://square.png" type="Texture" id=4]
[ext_resource path="res://ProdJeuGodot.mp3" type="AudioStream" id=5]
[ext_resource path="res://AudioStreamPlayer.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9, 9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13, 152 )

[node name="World" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0941176, 0.0705882, 0.262745, 1 )
position = Vector2( 0, 6 )
scale = Vector2( 200, 200 )
z_index = -5
texture = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 24.0
margin_top = 29.0
margin_right = 104.0
margin_bottom = 61.0
tab_size = 24

[node name="PlayerNode" type="Node2D" parent="."]

[node name="Player" type="KinematicBody2D" parent="PlayerNode"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
position = Vector2( 64, 0 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="PlayerNode/Player"]
position = Vector2( 64, 0 )
texture = ExtResource( 4 )

[node name="Detect" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Detect"]
position = Vector2( 64, 0 )
shape = SubResource( 5 )

[node name="Resetter" type="Area2D" parent="PlayerNode/Player"]
position = Vector2( 64, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Resetter"]
position = Vector2( -325, 0 )
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="PlayerNode/Player"]
position = Vector2( 64, 0 )
texture = ExtResource( 2 )
shadow_enabled = true

[node name="WallNode" parent="." instance=ExtResource( 1 )]
position = Vector2( 304, 344 )

[node name="WallNode2" parent="." instance=ExtResource( 1 )]
position = Vector2( 584, 280 )

[node name="WallNode3" parent="." instance=ExtResource( 1 )]
position = Vector2( 848, 178 )

[node name="WallNode4" parent="." instance=ExtResource( 1 )]
position = Vector2( 1112, 304 )

[node name="WallNode5" parent="." instance=ExtResource( 1 )]
position = Vector2( 1360, 392 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 1.0
autoplay = true
script = ExtResource( 6 )

[connection signal="area_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_body_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Resetter" to="PlayerNode/Player" method="_on_Resetter_body_entered"]
